# alps-agent

./: .env.example  .gitignore  API.md  CLAUDE.md  Makefile  Phase-1-任务进度跟踪.md  README.md  pyproject.toml  前端设计大纲.md  设计文档-Phase 1 MVP 详细实施路线图.md  设计文档-Phase 2 质量增强 详细实施路线图.md  设计文档-Phase 3 企业级能力 详细实施路线图.md  设计文档-Phase 4 多智能体 & 高级能力 详细实施路线图.md  设计文档.md
docker/: Dockerfile.api  Dockerfile.worker  docker-compose.yml
docker/configs/postgres/: init.sql
docker/configs/redis/: redis.conf
frontend/: .prettierrc  README.md  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/config/: api.ts  routes.tsx  theme.ts
frontend/src/hooks/: useAuth.ts  useChat.ts
frontend/src/services/: chatService.ts  documentService.ts  evaluationService.ts  request.ts
frontend/src/stores/: authStore.ts  chatStore.ts  settingsStore.ts
frontend/src/types/: chat.ts  common.ts  document.ts  evaluation.ts
scripts/: init_db.py
src/api/: dependencies.py  main.py
src/api/middlewares/: error_handler.py  logging_middleware.py
src/api/routers/: auth.py  chat.py  documents.py  evaluation.py  health.py
src/core/memory/: manager.py  short_term.py
src/evaluation/: __init__.py  dataset_generator.py  deepeval_evaluator.py  ragas_evaluator.py  runner.py
src/schemas/: auth.py  chat.py  common.py  document.py
tests/: conftest.py
tests/e2e/: test_full_conversation.py
tests/integration/: test_chat_api.py  test_document_api.py  test_rag_pipeline.py
tests/unit/: test_chunker.py  test_memory.py  test_metadata_extractor.py  test_orchestrator.py  test_query_understanding.py  test_retriever.py
(+67 files in other folders)
